add qven tests and delete kotlin plugins