@@ -1,9 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.9.25'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.25'
     id 'org.springframework.boot' version '3.4.5'
     id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
+    id 'java'
 }
 
 group = 'com.storage'
@@ -46,25 +44,21 @@ dependencies {
 
     implementation 'com.googlecode.xmemcached:xmemcached:2.4.8'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.yaml:snakeyaml'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-kotlin {
-    compilerOptions {
-        freeCompilerArgs.addAll '-Xjsr305=strict'
-    }
-}
-
-allOpen {
-    annotation 'jakarta.persistence.Entity'
-    annotation 'jakarta.persistence.MappedSuperclass'
-    annotation 'jakarta.persistence.Embeddable'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    systemProperty 'mockito.inline.enabled', 'false'
+
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
